# gwatch

./: CMakeLists.txt  Dockerfile  README.md  VariableWatcher.hpp  main.cpp
testBinary/: CMakeLists.txt  Dockerfile  main.cpp
